--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "node server.js",
     "build": "next build",
     "heroku-postbuild": "npm run build",
-    "start": "NODE_ENV=production node server.js"
+    "start": "next start -p $PORT"
   },
   "author": "",
   "license": "ISC",
